# 261R0136COSE34102

./: .gitignore  LICENSE  README.md  requirements.txt  serve.sh
experiments/: exp1_chain.sh  exp1_report.py  exp2_analysis.py  exp3_analysis.py  exp3_chain.sh  exp4_phaseA.sh  exp4_phaseA_report.py  exp4_phaseB.sh  exp4_phaseB_report.py  exp5_chain.sh  exp5_report.py
results/derived_fixtures/: gsm8k_test_gt.jsonl  gsm8k_test_prompts.jsonl  mmlu_abstract_algebra_gt.jsonl  mmlu_abstract_algebra_prompts.jsonl  mmlu_high_school_biology_gt.jsonl  mmlu_high_school_biology_prompts.jsonl  mmlu_professional_law_gt.jsonl  mmlu_professional_law_prompts.jsonl
results/reports/: exp1_report.json  exp2_report.json  exp3_report.json  exp4_phaseA_report.json  exp4_phaseB_report.json  exp5_report.json
results/runs/: run_exp1_mmlu_alg.jsonl  (+28 more)
scoring/: build_hf_harness.py  build_presets.py  compare.py  criteria.md  measure_rates.py  score.py  score_accuracy.py
slm_bench/: pyproject.toml
slm_bench/configs/: 0shot_system_prompt_cot.txt  0shot_system_prompt_default.txt  0shot_system_prompt_direct.txt  0shot_system_prompt_valaware.txt  model_presets.json  system_prompt_cot.txt  system_prompt_default.txt  system_prompt_direct.txt  system_prompt_valaware.txt
slm_bench/fixtures/: RF390_dataset.jsonl
slm_bench/fixtures/hf/: gsm8k_test.jsonl  mmlu_abstract_algebra_test.jsonl  mmlu_high_school_biology_test.jsonl  mmlu_professional_law_test.jsonl
slm_bench/scripts/: render_html.py  run_harness.py
slm_bench/src/slm_bench/: __init__.py  harness.py  parser.py  simulator.py
