[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-bench"
version = "0.1.0"
description = "Multi-stage SLO action benchmark harness for SLMs (raw I/O collector)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
